fixed minor layout issue of zero button

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@ body {
 }
 
 #button-0 {
-	grid-area: 0;
+	grid-area: zero;
 }
 
 #button-1 {
